[package]
name = "autodca-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autodca = { path = "../../programs/autodca", features = ["no-entrypoint"] }
anchor-client = "0.24.2"
anchor-spl = "0.24.2"
dotenv = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
clap = { version = "3.1.12", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.30"